k8s/base/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "finance-frontend"
      variant: "blue"
  template:
    metadata:
      labels:
        app: "finance-frontend"
        variant: "blue"
    spec:
      containers:
        - name: frontend
          image: ${ECR_REGISTRY}/sahil1709/finance-manager-frontend:${TAG}
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "finance-frontend"
      variant: "green"
  template:
    metadata:
      labels:
        app: "finance-frontend"
        variant: "green"
    spec:
      containers:
        - name: frontend
          image: ${ECR_REGISTRY}/sahil1709/finance-manager-frontend:${TAG}
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: finance-frontend-svc
spec:
  type: LoadBalancer
  selector:
    app: "finance-frontend"
    variant: "blue" 
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: finance-frontend-green-svc
spec:
  type: LoadBalancer
  selector:
    app: "finance-frontend"
    variant: "green"
  ports:
    - port: 80
      targetPort: 3000
